...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e0R-RM-Whk">
                                        <rect key="frame" x="0.0" y="0.0" width="277" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewControllerTurnLabel"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                        <nil key="textColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3q-lj-0mf">
                                        <rect key="frame" x="285" y="0.0" width="50" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewControllerRestartButton"/>
                                        <state key="normal" title="Restart"/>
                                        <connections>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGT-Na-II2">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button0"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="5XS-uE-JnU"/>
...
                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Deb-DP-mPB">
                                                <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button1"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="VXn-eG-YWf"/>
...
                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R8g-kp-fOO">
                                                <rect key="frame" x="196" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button2"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="PYj-Md-geW"/>
...
                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylJ-qq-3kA">
                                                <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button4"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="FZ2-zC-dyv"/>
...
                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2h-Tg-H3c">
                                                <rect key="frame" x="196" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button5"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="OLZ-85-rYE"/>
...
